going to try and fix cutoff

--- a/strange-attractors.css
+++ b/strange-attractors.css
@@ -7,11 +7,11 @@
 	letter-spacing: 0.04rem;
 	user-select: none;
 	box-sizing: border-box;
-	--grey: #222222;
+	--text: #222222;
 	--background: #ffffff;
 	--canvas-background: #ffffff;
 	--top-whitespace: min( 10vh, 10vw );
- 	touch-action: none;
+ 	/*touch-action: none;*/
  	-webkit-tap-highlight-color: transparent;
 }
 
@@ -34,7 +34,7 @@ body {
 	height: 100vh;
 	grid-row: 1;
 	grid-column: 1;
-	touch-action: none;
+	/*touch-action: none;*/
 	pointer-events: none;
 	z-index: 2;
 }
@@ -50,9 +50,10 @@ body {
 	grid-template-rows: auto 1fr;
 	overflow: visible;
 	overflow-y: auto;
-	color: var(--grey);
+	color: var(--text);
 	justify-content: left;
 	width: min-content;
+	white-space: nowrap;
 	background: var(--background);
 }
 
@@ -76,17 +77,16 @@ body {
 	justify-self: start;
 	align-self: start;
 	z-index: 1;
-	pointer-events: none;
 	position: sticky;
 	top: calc( -1 * var(--top-whitespace) );
 	margin-top: calc( -1 * var(--top-whitespace) );
 	padding-top: var(--top-whitespace);
 	padding-left: 1rem;
 	margin-left: -1rem;
-	white-space: nowrap;
 	display: grid;
 	grid-gap: 0.8rem;
 	grid-template-columns: 12rem auto;
+	/*overflow: visible;*/
 }
 
 #download-stl {
@@ -96,26 +96,19 @@ body {
 h1 {
 	font-size: 4rem;
 	grid-column: 1/3;
-	color: var(--grey);
+	color: var(--text);
 }
 
-#ui-top {
+#ui-scroll {
 	display: grid;
     direction:ltr;
     overflow: visible;
-    /*background: red;*/
 	align-content: start;
-	touch-action: auto;
 }
 
 @media only screen and (max-width: 600px) {
 	#title-container {
 		padding-bottom: 45vh;
-		pointer-events: auto;
-	}
-
-	#ui-top {
-		touch-action: auto;
 	}
 }
 
@@ -137,22 +130,22 @@ input {
 	width: 15rem;
 	height: 2.42rem;
 	border: 0.2rem solid transparent;
-	border-bottom: 0.1rem solid var(--grey);
+	border-bottom: 0.1rem solid var(--text);
 	padding: 0.5rem;
 	padding-bottom: 0.6rem;
 	margin-left: -0.2rem;
-	color: var(--grey);
+	color: var(--text);
 }
 
 input:hover {
 	padding: 0.5rem;
-	border: 0.2rem solid var(--grey);
+	border: 0.2rem solid var(--text);
 	border-radius: 0.32rem;
 }
 
 input:focus {
 	padding: 0.5rem;
-	border: 0.2rem solid var(--grey);
+	border: 0.2rem solid var(--text);
 	border-radius: 0.32rem;
 	box-shadow: 0 0 0px 4px #00000090;
 	outline: none;
@@ -222,10 +215,8 @@ input.error {
 }
 
 input[type="color"] {
-	/*border-bottom: 0.2rem solid transparent;*/
-	/*padding: 0;*/
 	margin-top: -0.25rem;
-	color: var(--grey);
+	color: var(--text);
 }
 
 @supports (-moz-appearance:none) {
@@ -250,18 +241,9 @@ input[type="color"] {
 	outline: none;
 }
 
-#ui-left {
-	grid-row: 1;
-	grid-column: 1;
-	display: grid;
-	align-content: start;
-	justify-content: right;
-	padding: 5.8rem 5rem;
-}
-
 button {
 	margin-bottom: 0.5rem;
-	background: var(--grey);
+	background: var(--text);
 	color: var(--background);
 	border-radius: 0.32rem;
 	cursor: pointer;
@@ -270,13 +252,13 @@ button {
 	padding: 0.6rem 1.0rem;
 	text-align: center;
 	font-size: 1.2rem;
-	border: 0.2rem solid var(--grey);
+	border: 0.2rem solid var(--text);
 	grid-column: 1;
 	pointer-events: auto;
 }
 
 button:hover {
-	color: var(--grey);
+	color: var(--text);
 	background: var(--background);
 }
 
@@ -288,39 +270,6 @@ button:focus {
 	box-shadow: 0 0 0px 4px #00000090;
 	outline: none;
 }
-
-/*#preset-dropdown {
-	background: transparent;
-	font-family: inherit;
-	font-size: 1.2rem;
-	border: 0.2rem solid transparent;
-	border-bottom: 0.1rem solid black;
-	width: 15rem;
-	padding: 0.4rem;
-	margin-left: -0.2rem;
-	height: 2.42rem;
-	box-sizing: border-box;
-	text-align: left;
-	color: black;
-}
-
-#preset-dropdown:hover {
-	padding: 0.4rem;
-	border: 0.2rem solid var(--grey);
-	border-radius: 0.32rem;
-}
-
-#preset-dropdown:active {
-	box-shadow: none !important;
-}
-
-#preset-dropdown:focus {
-	padding: 0.4rem;
-	border: 0.2rem solid var(--grey);
-	border-radius: 0.32rem;
-	box-shadow: 0 0 0px 4px #00000090;
-	outline: none;
-}*/
 
 #dropdown-outer {
 	position: relative;
@@ -334,17 +283,17 @@ button:focus {
 	z-index: 0;
 	display: grid;
 	border: 0.2rem solid transparent;
-	border-bottom: 0.1rem solid var(--grey);
+	border-bottom: 0.1rem solid var(--text);
 }
 
 #dropdown-inner:hover {
-	border: 0.2rem solid var(--grey);
+	border: 0.2rem solid var(--text);
 	border-radius: 0.32rem;
 }
 
 #dropdown-inner:focus-within {
 	/*height: min-content;*/
-	border: 0.2rem solid var(--grey);
+	border: 0.2rem solid var(--text);
 	border-radius: 0.32rem;
 	box-shadow: 0 0 0px 4px #00000090;
 }
@@ -353,7 +302,7 @@ button:focus {
 	width: 15rem;
 	text-align: left;
 	background: transparent;
-	color: var(--grey);
+	color: var(--text);
 	border: none;
 	border-radius: 0;
 	height: 0;
